--- a/burrtype_derive/Cargo.toml
+++ b/burrtype_derive/Cargo.toml
@@ -9,6 +9,8 @@ proc-macro = true
 
 [dependencies]
 burrtype = { path = ".." }
-syn = "2.0"
+syn = { version = "2.0", features = ["full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
+paste = "1.0"
+Inflector = "0.11"
