--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,6 @@ name = "burrtype"
 version = "0.1.0"
 edition = "2021"
 
-[workspace]
-members = [
-    ".",
-    "burrtype_derive"
-]
-
 [dependencies]
 thiserror = "1.0"
 syn = { version = "2.0", features = ["full", "extra-traits"] }
@@ -21,3 +15,4 @@ path_macro = "1.0"
 [dev-dependencies]
 burrtype_derive = { path = "./burrtype_derive" }
 anyhow = "1.0"
+bevy_reflect = "0.11"
