--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,17 +3,28 @@ name = "burrtype"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = [
+    ".",
+    "burrtype_derive",
+    "burrtype_internal",
+]
+
+[features]
+default = ["typescript"]
+typescript = []
+
 [dependencies]
-bevy_reflect = { version = "0.11", optional = true }
+burrtype_derive = { path = "./burrtype_derive" }
+burrtype_internal = { path = "./burrtype_internal" }
 thiserror = "1.0"
+proc-macro2 = { version = "1.0", features = ["span-locations"] }
 syn = { version = "2.0", features = ["full", "extra-traits"] }
 quote = "1.0"
-proc-macro2 = { version = "1.0", features = ["span-locations"] }
 itertools = "0.11"
 Inflector = "0.11"
 path_macro = "1.0"
 path-slash = "0.2"
 
 [dev-dependencies]
-burrtype_derive = { path = "./burrtype_derive" }
 anyhow = "1.0"
