--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,24 +3,13 @@ name = "burrtype"
 version = "0.1.0"
 edition = "2021"
 
-[workspace]
-members = [
-    ".",
-    "burrtype_derive",
-    "burrtype_internal",
-]
-
 [features]
 default = ["typescript"]
 typescript = []
 
 [dependencies]
-burrtype_derive = { path = "./burrtype_derive" }
-burrtype_internal = { path = "./burrtype_internal" }
+bevy_reflect = "0.11"
 thiserror = "1.0"
-proc-macro2 = { version = "1.0", features = ["span-locations"] }
-syn = { version = "2.0", features = ["full", "extra-traits"] }
-quote = "1.0"
 itertools = "0.11"
 Inflector = "0.11"
 path_macro = "1.0"
