--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,24 +7,25 @@ edition = "2021"
 members = [
     ".",
     "burrtype_derive",
-    "burrtype_internal",
+    "examples/sandbox",
 ]
 
 [features]
-default = ["typescript"]
+default = ["comments"]
 typescript = []
+comments = ["bevy_reflect/documentation"]
 
 [dependencies]
-burrtype_derive = { path = "./burrtype_derive" }
-burrtype_internal = { path = "./burrtype_internal" }
+burrtype_derive = { path = "burrtype_derive" }
+bevy_reflect = "0.11"
 thiserror = "1.0"
-proc-macro2 = { version = "1.0", features = ["span-locations"] }
-syn = { version = "2.0", features = ["full", "extra-traits"] }
-quote = "1.0"
 itertools = "0.11"
 Inflector = "0.11"
 path_macro = "1.0"
 path-slash = "0.2"
+syn = "2.0"
+quote = "1.0"
+linkme = "0.3"
 
 [dev-dependencies]
 anyhow = "1.0"
