--- a/burrtype_derive/Cargo.toml
+++ b/burrtype_derive/Cargo.toml
@@ -8,8 +8,7 @@ name = "burrtype_derive"
 proc-macro = true
 
 [dependencies]
-burrtype_internal = { path = "../burrtype_internal" }
-syn = { version = "2.0", features = ["full"] }
+syn = "2.0"
 quote = "1.0"
 proc-macro2 = "1.0"
 paste = "1.0"
