updated Cargo for publishing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "burrtype"
+description = "A framework for exporting types to other languages"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/thebluefish/burrtype"
 
 [workspace]
 members = [
