--- a/burrtype_derive/Cargo.toml
+++ b/burrtype_derive/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "burrtype_derive"
+description = "Macro helpers for burrtype"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/thebluefish/burrtype"
 
 [lib]
 name = "burrtype_derive"
