--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ typescript = []
 comments = ["bevy_reflect/documentation"]
 
 [dependencies]
-burrtype_derive = { path = "burrtype_derive" }
+burrtype_derive = { path = "burrtype_derive", version = "0.1" }
 bevy_reflect = "0.11"
 thiserror = "1.0"
 Inflector = "0.11"
