--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "burrtype"
 description = "A framework for exporting types to other languages"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/thebluefish/burrtype"
@@ -10,17 +10,20 @@ repository = "https://github.com/thebluefish/burrtype"
 members = [
     ".",
     "burrtype_derive",
+    "burrtype_internal",
     "examples/sandbox",
+    "examples/sandbox/test-server"
 ]
 
 [features]
-default = ["comments"]
+default = ["comments", "auto_register"]
 typescript = []
-comments = ["bevy_reflect/documentation"]
+auto_register = ["burrtype_derive/auto_register"]
+comments = ["burrtype_derive/docs", "burrtype_internal/docs"]
 
 [dependencies]
-burrtype_derive = { path = "burrtype_derive", version = "0.1" }
-bevy_reflect = "0.11"
+burrtype_derive = { path = "burrtype_derive", version = "0.2" }
+burrtype_internal = { path = "burrtype_internal", version = "0.2" }
 thiserror = "1.0"
 Inflector = "0.11"
 path_macro = "1.0"
