--- a/examples/sandbox/Cargo.toml
+++ b/examples/sandbox/Cargo.toml
@@ -10,3 +10,4 @@ axum = "0.6"
 tokio = { version = "1.0", features = ["full"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+rust_decimal = { version = "1.32", features = ["serde-float", "serde-arbitrary-precision"]}
