--- a/examples/sandbox/test-server/Cargo.toml
+++ b/examples/sandbox/test-server/Cargo.toml
@@ -10,3 +10,4 @@ axum = "0.6"
 tokio = { version = "1.0", features = ["full"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+rust_decimal = "1.32"
