--- a/burrtype_internal/Cargo.toml
+++ b/burrtype_internal/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "burrtype_internal"
+description = "Reflection types for `burrtype` and `burrtype_derive`"
 version = "0.2.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/thebluefish/burrtype"
 
 [features]
 default = []
