finished support for #[serde(rename_all)], corrected ir gen

--- a/burrtype_derive/Cargo.toml
+++ b/burrtype_derive/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/thebluefish/burrtype"
 default = ["serde_compat"]
 docs = ["burrtype_internal/docs"]
 auto_register = []
-serde_compat = ["burrtype_internal/serde_compat"]
+serde_compat = []
 
 [lib]
 name = "burrtype_derive"
