--- a/burrtype_internal/Cargo.toml
+++ b/burrtype_internal/Cargo.toml
@@ -13,3 +13,5 @@ docs = []
 [dependencies]
 proc-macro2 = "1.0"
 syn = { version = "2.0", features = ["full", "extra-traits"] }
+quote = "1.0"
+Inflector = "0.11"
