added Burrexporter::resolve_all to automatically import types, added auto_types example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     ".",
     "burrtype_derive",
     "burrtype_internal",
+    "examples/auto_types",
     "examples/sandbox",
     "examples/sandbox/test-server"
 ]
