removed serde_compat default feature from burrtype_derive, instead propagates from main crate

--- a/burrtype_derive/Cargo.toml
+++ b/burrtype_derive/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/thebluefish/burrtype"
 
 [features]
-default = ["serde_compat"]
+default = []
 docs = ["burrtype_internal/docs"]
 auto_register = []
 serde_compat = []
